"Rename file to index.html for GitHub Pages" git push origin main

--- a/PROCESO_DE_ACREDITACION_CARRERA_COMERCIO_INTERNACIONAL_v2 (4).html
+++ b/PROCESO_DE_ACREDITACION_CARRERA_COMERCIO_INTERNACIONAL_v2 (4).html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Proceso de Acreditación - Carrera de Comercio Internacional</title>
+  <title>index.html</title>
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial; margin:0; background:#f5f7fb; color:#102a43;}
     .container{max-width:1000px;margin:30px auto;padding:20px;}
@@ -122,21 +122,14 @@
             <li><a href="#" target="_blank" rel="noopener">Pasantías (TikTok)</a></li>
             <li><a href="#" target="_blank" rel="noopener">Explicación de modalidades de graduación por excelencia (TikTok)</a></li>
           </ul>
-
           <p class="block-heading">Talleres y Conferencias</p>
           <ul class="links">
             <li><a href="#" target="_blank" rel="noopener">Conferencia-taller INCOTERMS</a></li>
             <li><a href="#" target="_blank" rel="noopener">Conferencia: Marketing en tiempos de crisis</a></li>
             <li><a href="#" target="_blank" rel="noopener">Conferencia: Monetización de datos</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
     <div class="foot card">
       <div>Documento original convertido a página web - Carrera de Comercio Internacional</div>
       <div style="margin-top:6px;font-size:13px;color:#48657a;">Contenido: Carátula + MARCO INSTITUCIONAL · ESTATUTOS Y REGLAMENTOS · DATOS REFERENCIALES</div>
-    </div>
-  </div>
-</body>
-</html>
+      git add index.html
+git commit -m "Rename file to index.html for GitHub Pages"
+git push origin main
